Continued Door Pathway Rework